# earth-trip-visualizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: download_assets.py
src/earth_trip/: main.py
src/earth_trip/core/: animator.py  cache.py  geocoder.py  renderer.py  tiles.py  video_builder.py  worker.py
src/earth_trip/ui/: city_item.py  city_panel.py  city_suggestions.py  main_window.py  player_panel.py
src/earth_trip/utils/: easing.py  geo.py
